Add login menu and account options
- Add Change password feature
- Add logout feature
- Add more checking for login
- Save system updated to use csv (with headers)
- Contact Info properly serialised