@@ -1,8 +1,6 @@
 package DataHandling;
 
-import Model.Appointment;
 import Model.Patient;
-import Singletons.AppointmentManager;
 import Singletons.UserLoginManager;
 
 import java.util.ArrayList;
@@ -13,20 +11,20 @@ public class SaveManager {
     private final PatientSerializer patientSerializer = new PatientSerializer();
 
     private final String FOLDER_PATH = "./src/SaveData/";
-    private final String PATIENT_FILE = "patients.txt";
     private final String APPOINTMENT_FILE = "appointments.txt";
 
-    private final String INITIAL_PATIENTS = "./src/CSV/Patient_List.csv";
+    private final String PATIENT_FILE = "./src/CSV/Patient_List.csv";
     private final String INITIAL_STAFF = "./src/CSV/Staff_List.csv";
     private final String INITIAL_MEDICINE = "./src/CSV/Medicine_List.csv";
 
     public void savePatients() {
         List<Patient> patients = UserLoginManager.getInstance().getAllPatients();
-        List<String> serializedPatients = new ArrayList<>();
+        List<String> stringsToWrite = new ArrayList<>();
+        stringsToWrite.add("Patient ID,Name,Date of Birth,Gender,Blood Type,Contact Information,Password");
         for (Patient patient : patients) {
-            serializedPatients.add(patientSerializer.serialize(patient));
+            stringsToWrite.add(patientSerializer.serialize(patient));
         }
-        saveService.saveData(PATIENT_FILE, serializedPatients);
+        saveService.saveData(PATIENT_FILE, stringsToWrite);
     }
     /*
     TODO: Implement saveAppointments
@@ -41,14 +39,7 @@ public class SaveManager {
 
     public void loadPatients() {
         List<String> serializedPatients = saveService.readData(PATIENT_FILE);
-        for (String serializedPatient : serializedPatients) {
-            Patient p = patientSerializer.deserialize(serializedPatient);
-            UserLoginManager.getInstance().addUser(p);
-        }
-    }
-    public void initialLoad(){
-        List<String> serializedPatients = saveService.readData(INITIAL_PATIENTS);
-        serializedPatients.removeFirst(); // remove the header
+        serializedPatients.remove(0); // remove the header
         for (String serializedPatient : serializedPatients) {
             Patient p = patientSerializer.deserialize(serializedPatient);
             UserLoginManager.getInstance().addUser(p);
